# Falcon

./: .gitignore  README.md
backend/: .env.example  .env.worker.example  main.py  requirements.txt  worker.py
backend/alembic/: env.py
backend/app/: cli.py  db.py
backend/proto/: worker_runtime.proto
deploy/: .env.master.example  .env.worker.example  README.md  docker-compose.yml  falcon-master.Dockerfile  falcon-ui.Dockerfile  falcon-ui.nginx.conf  falcon-worker.Dockerfile
docs/: distributed-engine-design.md  grpc-worker-runbook.md
falcon-master/: .env.example  alembic.ini  main.py  manage.py  requirements.txt
falcon-master/alembic/: env.py
falcon-master/app/: __init__.py  db.py
falcon-shared/: README.md  pyproject.toml  requirements.txt
falcon-shared/falcon_shared/: __init__.py  runtime_enums.py  task_contracts.py
falcon-shared/falcon_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
falcon-shared/proto/: worker_runtime.proto
falcon-ui/: .env.development  index.html  package.json
falcon-ui/src/: components.d.ts  main.ts  settings.ts  style.css
falcon-worker/: .env.worker.example  requirements.txt  worker.py
falcon-worker/app/: __init__.py  banner.py  control_plane_client.py  control_plane_reporter.py  grpc_task_runner.py  logging_config.py  settings.py  worker_resource_snapshot.py  worker_runtime_service.py  worker_server.py
frontend/: .env.development  .env.production  .eslintrc-auto-import.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
(+233 files in other folders)
